--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ html {
     width: 50%;
     color: var(--primary-color);
     font-weight: 600;
+    border-bottom: 1px solid #2564eb38;
 }
 
 .todo span i {
