--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ html {
     border-radius: 50%;
     width: 20px;
     height: 20px;
-    font-size: 1px;
+    font-size: 1.8rem;
     position: absolute;
     top: 11px;
     right: -12px;
