Correct a Spelling Mistake

--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ html {
     background-color: #2564ebb4;
 }
 
-.compeleted {
+.completed {
     text-decoration: line-through;
     color: #2564eb80;
 }
